--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,3 +21,7 @@
 
 en:
   hello: "Hello world"
+  available: "available"
+  notavailable: "not available"
+  description: "Description"
+  ean: "Product ID"
