--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -28,4 +28,20 @@ en:
   description: "Description"
   ean: "Product ID"
   homepage: "Homepage"
+  startdate: "Start Date"
+  enddate: "End Date"
+  productname: "Product name"
+  edit: "Edit"
+  areyousure: "Are you sure ?"
+  destroy: "Delete"
+  ourlibrary: "Our Library"
+  locate: "Locate"
+  home: "Home"
+  signin: "Sign In"
+  profil: "Profil"
+  hires: "Hires"
+  signout: "Sign Out"
+  hiresediting: "Hire Editing"
+  show: "Show"
+  back: "Back"
 
