--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -235,3 +235,20 @@ fr:
       long: "%A %d %B %Y %Hh%M"
       short: "%d %b %Hh%M"
     pm: pm
+
+  startdate: "Date de début"
+  enddate: "Date de fin"
+  productname: "Nom du produit"
+  edit: "Editer"
+  areyousure: "Êtes vous sûre ?"
+  destroy: "Supprimer"
+  ourlibrary: "Notre Bibliotheque"
+  locate: "Louer"
+  home: "Accueil"
+  signin: "Sign In"
+  profil: "Profil"
+  hires: "Locations"
+  signout: "Déconnexion"
+  hiresediting: "Editer ses locations"
+  show: "Voir"
+  back: "Retour"
